--- a/CuboComputadora/Javascript/index.html
+++ b/CuboComputadora/Javascript/index.html
@@ -47,6 +47,12 @@
                         Estadisticas
                     </a>
             </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-white font-arial" id="MenuConfiguracion">
+                        
+                          Configuracion
+                      </a>
+              </li>
           </ul>
          
         </div>
@@ -99,7 +105,7 @@
     </div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/cubo.js"></script>
-    <script src="js/desplazamiento.js"></script>
+    <script src="js/menu_lateral.js"></script>
     <script src="js/serial.js"></script>
   </body>
 </html>
