--- a/CuboComputadora/Javascript/html/config.html
+++ b/CuboComputadora/Javascript/html/config.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/config.css">
     <title>config</title>
   </head>
 
@@ -16,24 +17,27 @@
 
     <div class="container">
       <div class="row">
-        <div class="col text-right" style="flex-grow: 2;">
+        <div class="col col-4 text-right" style="flex-grow: 2;">
           Puerto Serial: 
         </div>
-        <div class="col no-gutters">
+        <div class="col col-3 no-gutters">
           <div class="form-group">
             <select class="form-control form-control-sm" id="puertoCOM"></select>
           </div>
         </div>
         <div class="col">
+          <div>
             <button type="button" class="btn btn-primary btn-sm" id="btnRefresh">Actualizar</button>
+            <button type="button" class="btn btn-primary btn-sm" id="btnConectar">Conectar</button>
           </div>
-        <div class="col">
-          <button type="button" class="btn btn-primary btn-sm" id="btnConectar">Conectar</button>
         </div>
+      </div>
+      <div class="row">
+        <!-- Otra opcion de configuracion -->
       </div>
     </div>
     
-    <div class="float-right" style="padding-right: 5px;">
+    <div class="float-right" style="padding-right: 5px; padding-top: 25px;">
       <button type="button" class="btn btn-secondary" id="btnAceptar">Aceptar</button>
       <button type="button" class="btn btn-secondary" id="btnCancelar">Cancelar</button>
     </div>
