--- a/CuboComputadora/Javascript/html/config.html
+++ b/CuboComputadora/Javascript/html/config.html
@@ -29,6 +29,7 @@
           <div>
             <button type="button" class="btn btn-primary btn-sm" id="btnRefresh">Actualizar</button>
             <button type="button" class="btn btn-primary btn-sm" id="btnConectar">Conectar</button>
+            <label id="lblConectar" style="color: red;"></label>
           </div>
         </div>
       </div>
