--- a/CuboComputadora/Javascript/html/config.html
+++ b/CuboComputadora/Javascript/html/config.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="container">
+      <!-- Seleccion puerto -->
       <div class="row">
         <div class="col col-4 text-right" style="flex-grow: 2;">
           Puerto Serial: 
@@ -26,15 +27,35 @@
           </div>
         </div>
         <div class="col">
+          <button type="button" class="btn btn-primary btn-sm" id="btnRefresh">Actualizar</button>
+          <button type="button" class="btn btn-primary btn-sm" id="btnConectar">Conectar</button>
+          <label id="lblConectar" style="color: red;"></label>
+        </div>
+      </div>
+
+      <!-- Slider seleccionr brillo -->
+      <div class="row">
+        <div class="col col-4 text-right" style="flex-grow: 2;">
+          Brillo:
+        </div>
+        <div class="col">
           <div>
-            <button type="button" class="btn btn-primary btn-sm" id="btnRefresh">Actualizar</button>
-            <button type="button" class="btn btn-primary btn-sm" id="btnConectar">Conectar</button>
-            <label id="lblConectar" style="color: red;"></label>
+            <input type="range">
           </div>
         </div>
       </div>
+      
+      <!-- Comando personalizado -->
       <div class="row">
-        <!-- Otra opcion de configuracion -->
+        <div class="col col-4 text-right" style="flex-grow: 2;">
+          Comando:
+        </div>
+        <div class="col">
+          <input type="text" class="form-control form-control-sm" placeholder="<1, 0, 0x050000>" id="inputCmd">
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-primary btn-sm" id="btnSendCmd">Enviar</button>
+        </div>
       </div>
     </div>
     
