--- a/CuboComputadora/Javascript/html/Juego3D.html
+++ b/CuboComputadora/Javascript/html/Juego3D.html
@@ -2,17 +2,22 @@
 	<head>
 		<title>My first three.js app</title>
 		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			body {
+				margin: 0;
+			}
+			canvas {
+				width: 100%;
+				height: 100%;
+			}
 		</style>
 	</head>
 	<body>
-        <script src="https://cdnjs.com/libraries/three.js/"></script>
-        <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
-        
+		<script src="https://cdnjs.com/libraries/three.js/"></script>
+		<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
+
 		<script src="../node_modules/three/build/three.min.js"></script>
-    	<script src="../node_modules/three/build/three.js"></script>
-        <script src="../js/juegos/Juego3D.js"></script>
-        <script src="../node_modules/three/examples/jsm/loaders/GLTFLoader.js"></script>
+		<script src="../node_modules/three/build/three.js"></script>
+		<script src="../js/juegos/Juego3D.js"></script>
+		<script src="../node_modules/three/examples/jsm/loaders/GLTFLoader.js"></script>
 	</body>
 </html>
