--- a/CuboComputadora/Javascript/index.html
+++ b/CuboComputadora/Javascript/index.html
@@ -102,7 +102,7 @@
                         <option value="3">Figuras</option>
                         <option value="4"> Fechas</option>
                       </select>
-                      <input type="text" class="form-control col-md-3 " id="tiempoTexto" >
+                      <input type="text" class="form-control col-md-3 " placeholder="Tiempo" id="tiempoTexto" >
                     
                       <select class = "nivelSeleccion form-control" name="" id="selectorNiveles" >
                         <option value="1" >Nivel 1</option>
